# Dexterous-Hand

./: .gitignore  README.md  main.py  pyproject.toml
assets/shadow_hand/: gpu_audit.md  right_hand.xml  runpod_commands.md  runpod_commands_gpu.md  runpod_grasp_full.md  runpod_peg_full.md  runpod_peg_sanity.md  runpod_reorient_full.md  runpod_sanity_all_tasks.md
dexterous_hand/: config.py
dexterous_hand/curriculum/: callbacks.py
dexterous_hand/envs/: __init__.py  grasp_env.py  peg_env.py  peg_scene_builder.py  peg_tactile_env.py  reorient_env.py  reorient_scene_builder.py  scene_builder.py
dexterous_hand/policies/: clamped_actor.py
dexterous_hand/rewards/: grasp_reward.py  peg_reward.py  reorient_reward.py
dexterous_hand/tactile/: __init__.py  encoder.py  feature_extractor.py  sensor.py
dexterous_hand/utils/: mujoco_helpers.py  quaternion.py
scripts/: debug_mjx_memory.py  reward_probe.py
scripts/debug/: debug_mjx_memory.py  reward_probe.py
scripts/evaluation/: eval_grasp.py  eval_peg.py  eval_reorient.py  eval_tactile.py
scripts/training/: _common.py  train_grasp.py  train_peg.py  train_reorient.py  train_tactile.py
tests/: conftest.py  test_config.py  test_curriculum.py  test_env_smoke.py  test_grasp_env.py  test_mujoco_helpers.py  test_peg_env.py  test_peg_tactile_env.py  test_quaternion.py  test_reorient_env.py  test_reward_parity.py  test_rewards.py  test_tactile.py
tests/cpu/: test_curriculum.py  test_grasp_env.py  test_mujoco_helpers.py  test_peg_env.py  test_peg_tactile_env.py  test_quaternion.py  test_reorient_env.py  test_rewards.py  (+1 more)
(+42 files in other folders)
