[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dexterous-hand"
version = "0.1.0"
description = "Train a 24-DOF Shadow Hand for contact-rich manipulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "imageio>=2.37.3",
    "mujoco>=3.6.0",
    "stable-baselines3[extra]>=2.7.1",
    "torch",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["dexterous_hand"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mujoco.*", "stable_baselines3.*", "wandb.*", "gymnasium.*", "imageio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scripts.*"]
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["slow: tests requiring MuJoCo environments"]
